# demo-evcxr-sidecar

./: Demo.ipynb  README.md  Untitled.ipynb  conn.json  pyproject.toml
