[tool.poetry]
name = "evtest"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kernel-sidecar = {version = "^0.5.5", extras = ["cli"]}
ipython = "^8.15.0"
jupyter = "^1.0.0"
notebook = "^7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
